Fix scrollbars

--- a/src/ide/list-objects.less
+++ b/src/ide/list-objects.less
@@ -7,7 +7,7 @@
     margin: 0;
     padding: 0;
     flex-grow: 1;
-    overflow: scroll;
+    overflow: auto;
 
     li {
       padding: 1px 8px;
