--- a/src/ide/project-editor.less
+++ b/src/ide/project-editor.less
@@ -12,7 +12,7 @@
     flex-basis: 0;
     min-width: 0;
     min-height: 0;
-    overflow: hidden;
+    overflow: auto;
     display: flex;
     flex-wrap: nowrap;
     align-items: stretch;
@@ -55,7 +55,7 @@
   .PanelTop > *, .PanelLeft > *, .PanelRight > *, .PanelBottom > *, .PanelCenter > * {
     width: 100%;
     height: 100%;
-    overflow: scroll;
+    overflow: auto;
   }
 
   .PanelCenter > .Surface {
