--- a/src/ide/tabs.less
+++ b/src/ide/tabs.less
@@ -17,7 +17,7 @@
     list-style-type: none;
     padding: 0;
     margin: 2px 0 4px 0;
-    overflow-x: scroll;
+    overflow-x: auto;
     overflow-y: hidden;
     min-height: 20px;
     flex-grow: 0;
